nexus-provisioning/oc-provisioning/templates/template.yaml
---
# Source: sonatype-nexus/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonatype-nexus-service
  labels:
    app: sonatype-nexus
    fullname: nexus-sonatype-nexus
    chart: sonatype-nexus-1.1.8
    release: nexus
    heritage: Helm
spec:
  ports:
  - name: nexus-service
    port: 8081
    targetPort: 8081
  selector:
    app: sonatype-nexus
    release: nexus
  type: ClusterIP
---
# Source: sonatype-nexus/templates/deployment-statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-sonatype-nexus
  labels:
    app: sonatype-nexus
    fullname: nexus-sonatype-nexus
    chart: sonatype-nexus-1.1.8
    release: nexus
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonatype-nexus
      release: nexus
  template:
    metadata:
      labels:
        app: sonatype-nexus
        release: nexus
    spec:
      containers:
        - name: nexus
          image: registry.connect.redhat.com/sonatype/nexus-repository-manager:3.39.0-ubi-1
          imagePullPolicy: IfNotPresent
          lifecycle:
          resources:
            {}
          ports:
            - containerPort: 5003
              name: nexus-docker-g
            - containerPort: 8081
              name: nexus-http
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-sonatype-nexus-data
            - mountPath: /nexus-data/backup
              name: nexus-sonatype-nexus-backup
      volumes:
        - name: nexus-sonatype-nexus-data
          persistentVolumeClaim:
            claimName: nexus-sonatype-nexus-data
        - name: nexus-sonatype-nexus-backup
          emptyDir: {}


## create pvc in case of statefulsets
---
# Source: sonatype-nexus/templates/config-nexus.txt
# Define maven templates we use below

# The main nexus configuration here
---
# Source: sonatype-nexus/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
  labels: 
  annotations:
spec:
  host: null
  port:
    targetPort: nexus-service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sonatype-nexus-service
    weight: 100
  wildcardPolicy: None
